# ImageProcessing-ComputerVision-MachineLearning-Docker

./: CMakeLists.txt  Dockerfile  README.md  launch.sh
src/: CMakeLists.txt  main.cpp
